@@ -16,7 +16,6 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class ConfigsManager {
 
@@ -120,7 +119,7 @@ public class ConfigsManager {
         List<File> configs = Arrays
                 .stream(getGlyphsFiles())
                 .filter(file -> file.getName().endsWith(".yml"))
-                .collect(Collectors.toList());
+                .toList();
         Map<String, Integer> codePerGlyph = new HashMap<>();
         for (File file : configs) {
             YamlConfiguration configuration = YamlConfiguration.loadConfiguration(file);
@@ -167,7 +166,7 @@ public class ConfigsManager {
         List<File> configs = Arrays
                 .stream(getItemsFiles())
                 .filter(file -> file.getName().endsWith(".yml"))
-                .collect(Collectors.toList());
+                .toList();
         for (File file : configs)
             parseMap.put(file, parseItemConfigs(YamlConfiguration.loadConfiguration(file), file));
         return parseMap;
